# easybot

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.org  appveyor.yml  install.bat  install32.bat  meson.build  vcpkg.json
demo_use/: CMakeLists.txt  main.cc  vcpkg-configuration.json
include/: README.org
include/easybot/: easybot.h  img.h  process.h  util_color.h  util_cv.h  util_keyboard.h  util_process.h  util_window.h  window.h
include/easybot/internal/: global.h
include/easybot/model/: coordinate.h  hsv.h  hsv_range.h  pos.h
include/easybot/mouse/: mouse.h
include/easybot/util/: util_color.h  util_comm.h  util_cv.h  util_keyboard.h  util_process.h  util_string.h  util_window.h
include/private/: preload.h
src/: CMakeLists.txt  Config.cmake.in  img.cc  process.cc  util_color.cc  util_cv.cc  util_keyboard.cc  util_process.cc  util_string.cc  util_window.cc
src/include/: util_string.h  util_window.h
src/include/easybot/: easybot.h  util_window.h  window.h
src/mac/: mac_process.cpp
src/model/: hsv.cc  hsv_range.cc  pos.cc
src/mouse/: mouse.cc
src/util/: util_color.cc  util_comm.cpp  util_cv.cc  util_keyboard.cc  util_process.cc  util_string.cc  util_window.cc
src/win/: win_process.cc
src/window/: window.cc  window.h
test/: CMakeLists.txt  test_hsv_range.cc  test_process.cc  test_util_window.cc  test_window.cc  util_test.cc  util_test.h
